[package]
name = "bottle-time-processor"
version = "0.1.0"
description = "Processor to read events from mqtt and identify a bottle-time event from them"
keywords = []
categories = []

include = ["/src", "/benches", "README.md", "LICENSE"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.67"
documentation = "https://docs.rs/bottle-time-processor"
repository = "https://github.com/jeckhart/bottle-time-processor"
authors = ["John Eckhart <envoys-radius3t@icloud.com>"]

[lib]
path = "src/lib.rs"
bench = false
doctest = true

[[bin]]
name = "bottle-time-processor"
path = "src/main.rs"
doc = false
bench = false

[[bench]]
name = "a_benchmark"
harness = false
required-features = ["test_utils"]

[dependencies]
anyhow = "1.0"
proptest = { version = "1.6", optional = true }
miette = "7.5"
tracing = "0.1"
tracing-subscriber = "0.3"

# Tokio
tokio = { version = "1.43", features = ["default","full"] }

# Shutdown
tokio-graceful-shutdown = "0.16"

# Command line arguments
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
criterion = "0.4"
proptest = "1.1"

[features]
default = []
test_utils = ["proptest"]

[metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
#
# See https://doc.rust-lang.org/cargo/reference/profiles.html for more info.
# [profile.release]
# Do not perform backtrace for panic on release builds.
## panic = 'abort'
# Perform optimizations on all codegen units.
## codegen-units = 1
# Tell `rustc` to optimize for small code size.
## opt-level = "s" # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
## lto = true
# Amount of debug information.
# 0/false: no debug info at all; 1: line tables only; 2/true: full debug info
## debug = false
# Strip debug symbols
## strip = "symbols"

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
